--- a/admin/css/login.css
+++ b/admin/css/login.css
@@ -93,7 +93,7 @@ input[type="submit"]:hover {
         
 .olvido-password a {
     margin-top: 30px;
-    color: #99038f;
+    color: #3a3a3a;
     text-decoration: none;
     font-size: 14px;
     cursor: pointer;
@@ -107,12 +107,12 @@ input[type="submit"]:hover {
     text-align: center;
     margin-top: 20px;
     padding-top: 20px;
-    border-top: 1px solid #99038f;
+    border-top: 1px solid #3a3a3a;
 }
         
 .crear-cuenta p {
     margin: 0 0 10px 0;
-    color: #99038f;
+    color: #3a3a3a;
     font-size: 14px;
 }
         
